--- a/favoriteCity/Base.lproj/Main.storyboard
+++ b/favoriteCity/Base.lproj/Main.storyboard
@@ -34,7 +34,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="City " textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fMS-OP-as5">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="City " textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fMS-OP-as5">
                                 <rect key="frame" x="112.5" y="103" width="150" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="gJ3-dz-oSU"/>
@@ -44,7 +44,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="State" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GE0-UQ-xgy">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="State" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GE0-UQ-xgy">
                                 <rect key="frame" x="112.5" y="184" width="150" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="c1C-p2-A2K"/>
@@ -54,7 +54,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Population " textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XK8-Ia-cOh">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Population " textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XK8-Ia-cOh">
                                 <rect key="frame" x="112.5" y="255" width="150" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="Gf6-lz-0ua"/>
@@ -64,7 +64,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fDi-Wc-U1E">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fDi-Wc-U1E">
                                 <rect key="frame" x="62.5" y="337" width="250" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="250" id="Sis-aL-FvC"/>
@@ -75,7 +75,11 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="XK8-Ia-cOh" firstAttribute="centerX" secondItem="svH-Pt-448" secondAttribute="centerX" id="ErZ-Jd-GfU"/>
+                            <constraint firstItem="GE0-UQ-xgy" firstAttribute="top" secondItem="fMS-OP-as5" secondAttribute="bottom" constant="51" id="GzV-hf-1zH"/>
+                            <constraint firstItem="fMS-OP-as5" firstAttribute="top" secondItem="VUw-jc-0yf" secondAttribute="top" constant="39" id="N6a-tM-0m7"/>
                             <constraint firstItem="fDi-Wc-U1E" firstAttribute="centerX" secondItem="svH-Pt-448" secondAttribute="centerX" id="RV2-wA-2vc"/>
+                            <constraint firstItem="fDi-Wc-U1E" firstAttribute="top" secondItem="XK8-Ia-cOh" secondAttribute="bottom" constant="52" id="aNK-dZ-Lc8"/>
+                            <constraint firstItem="XK8-Ia-cOh" firstAttribute="top" secondItem="GE0-UQ-xgy" secondAttribute="bottom" constant="41" id="dEL-An-ZX0"/>
                             <constraint firstItem="fMS-OP-as5" firstAttribute="centerX" secondItem="svH-Pt-448" secondAttribute="centerX" id="mB2-Pa-lGY"/>
                             <constraint firstItem="GE0-UQ-xgy" firstAttribute="centerX" secondItem="svH-Pt-448" secondAttribute="centerX" id="zYS-La-NIs"/>
                         </constraints>
